# A-AI-Lab

./: README.md  cryptography.py  cryptography_ui.py  crypts(1st_draft)_IGNORE.py  crypts.py  pyproject.toml  unittesting.py
.gitignore/: old_cryptography_code_IGNORE.py
Summer Reports/: Summer Weekly Report 1
