[project]
name = "a-ai-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamila",email = "shulekhahuq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "sympy (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
